src/main/scala/SensibleTyping/output/RunGenerics2.output
(fragment of Generics2.scala):6: error: type mismatch;
 found   : java.util.ArrayList[Int]
 required: java.util.ArrayList[Nothing]
list2 = list1 // Compilation Error
         ^
one error found
!!!
discarding <script preamble>
